--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.3.1",
     "firebase": "^12.9.0",
     "framer-motion": "^12.34.0",
     "jspdf": "^4.1.0",
